--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 
 Copyright 2016-present, Facebook, Inc.
 All rights reserved.
@@ -15,7 +15,7 @@ LICENSE file in the root directory of this source tree.
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId: 'APP_ID',
+          appId: '1239972149386527',
           xfbml: true,
           version: 'v2.6'
         });
@@ -35,11 +35,11 @@ LICENSE file in the root directory of this source tree.
     <div>
       <p>The "Send to Messenger" plugin will trigger an authentication callback to your webhook.</p>
 
-      <div class="fb-send-to-messenger" 
-        messenger_app_id='APP_ID'
+      <div class="fb-send-to-messenger"
+        messenger_app_id='1239972149386527'
         page_id='PAGE_ID'
         data-ref="PASS_THROUGH_PARAM" 
-        color="blue" 
+        color="blue"
         size="standard">
       </div>
     </div>
@@ -47,8 +47,8 @@ LICENSE file in the root directory of this source tree.
     <div>
       <p>The "Message Us" plugin takes the user directly to Messenger and into a thread with your Page.</p>
 
-      <div class="fb-messengermessageus" 
-        messenger_app_id='APP_ID'
+      <div class="fb-messengermessageus"
+        messenger_app_id='1239972149386527'
         page_id='PAGE_ID'
         color="blue"
         size="standard">
