--- a/public/PrivatePolicy.html
+++ b/public/PrivatePolicy.html
@@ -1,5 +1,10 @@
-<p>This Privacy Policy governs the manner in which Babel Fish Bot collects, uses, maintains and discloses information collected from users (each, a "User") of the https://babel-fish-bot.herokuapp.com/ website ("Site").</p>
+<html>
+  <head>
+    <title>Private Policy</title>
+  </head>
+  <body>
 
+<p>This Privacy Policy governs the manner in which Babel Fish Bot collects, uses, maintains and discloses information collected from users (each, a "User") of the https://babel-fish-bot.herokuapp.com/ website ("Site").</p>
 <h3>Personal identification information</h3>
 <p>We may collect personal identification information from Users in a variety of ways in connection with activities, services, features or resources we make available on our Site. Users may visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site related activities.</p>
 
@@ -65,3 +70,5 @@
 <p>If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us.</p>
 
 <p>This document was last updated on October 06, 2016</p>
+</body>
+</html>
