added private policy

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@ LICENSE file in the root directory of this source tree.
 
       <div class="fb-send-to-messenger"
         messenger_app_id='1239972149386527'
-        page_id='PAGE_ID'
-        data-ref="PASS_THROUGH_PARAM" 
+        page_id='112893352049574'
+        data-ref="from a Heroku site" 
         color="blue"
         size="standard">
       </div>
@@ -49,7 +49,7 @@ LICENSE file in the root directory of this source tree.
 
       <div class="fb-messengermessageus"
         messenger_app_id='1239972149386527'
-        page_id='PAGE_ID'
+        page_id='112893352049574'
         color="blue"
         size="standard">
       </div>
